assets/css/style.css
/* ... */
.hero-area-video {
    height: 100vh;
    position: inherit !important;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-area-video .block {
    color: #fff;
    text-align: center;
}

.hero-area-video .block h1 {
    font-size: 60px;
    font-weight: 700;
    margin-bottom: 20px;
}

.hero-area-video .block p {
    color: #fff;
    text-transform: uppercase;
    font-size: 12px;
    letter-spacing: 3px;
    margin-bottom: 20px;
}

.hero-area-video .block .btn-main {
    margin-top: 20px;
}

.dark-bg {
    background: rgba(0, 0, 0, 0.76);
    height: 100%;
    width: 100%;
    position: absolute;
    z-index: -1;
}


/*=================================================================
    To Top Button
=================================================================*/
#content {
    position: relative;
}

#topPerent {
    position: absolute;
	height: calc(100% - 120vh);
    top: 150vh;
	right: 0px;
	width: 65px;
	background-color: #0000;
}

#top {
    position: -webkit-sticky; /* Safari */
    position: sticky;
    top: 92vh;
    background-color: #0cbcf2;
    box-shadow: 2px 2px 2px black;
    padding: 5px 5px 16px 5px;
    border: 1px solid #6bffec;
    border-radius: 50%;
    font-size: 28px;
    display: inline-block;
    height: 38px;
    width: 38px;
    text-align: center;
    z-index: 5;
    
}


/*=================================================================
    Banner
=================================================================*/
.hero-area {
    background-size: cover;
    background-position: bottom left;
    height: 100vh;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-area:before {
    content: '';
    background: rgba(0, 0, 0, 0.63);
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.hero-area .block {
    text-align: center;
    z-index: 99;
}

.hero-area .block .video-button {
    background: #fff;
    color: #57cbcc;
    display: inline-block;
    height: 60px;
    width: 60px;
    border-radius: 50px;
}

.hero-area .block .video-button i {
    line-height: 60px;
    font-size: 20px;
    margin-left: 3px;
}

.hero-area .block h1 {
    font-size: 90px;
    color: #fff;
    text-transform: capitalize;
    font-weight: 700;
    margin-bottom: 20px;
}

@media (max-width: 480px) {
    .hero-area .block h1 {
        font-size: 60px;
    }
}

.hero-area .block p {
    color: #fff;
    font-size: 20px;
    width: 70%;
    margin: 0 auto;
}

.hero-area .block .btn-transparent {
    margin-top: 40px;
    border-color: #fff;
    padding: 14px 50px;
    font-size: 18px;
    font-size: 16px;
    font-weight: bold;
    letter-spacing: 1px;
}

.hero-area-video {
    height: 100vh;
    position: inherit !important;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-area-video .block {
    color: #fff;
    text-align: center;
}

.hero-area-video .block h1 {
    font-size: 60px;
    font-weight: 700;
    margin-bottom: 20px;
}

.hero-area-video .block p {
    color: #fff;
    text-transform: uppercase;
    font-size: 12px;
    letter-spacing: 3px;
    margin-bottom: 20px;
}

.hero-area-video .block .btn-main {
    margin-top: 20px;
}


/*=================================================================
    Banner 2
=================================================================*/
.backgroundContainer {
    background-color: #040b1e;
    position: fixed;
    top: 0;
    border: 0;
    left: 0;
    right: 0;
}

/*img.loaded video.loaded {
    opacity: 1;
    transition: opacity 0.4s ease;
    -webkit-transition: opacity 0.4s ease;
}*/

.hero-video {
    min-width: 100%;
    min-height: 100%;
    z-index: -9;
    width: auto;
    height: auto;
    position: absolute;
    /*top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);*/
}

/*=================================================================
    About Page
=================================================================*/
/* .about-header {
    
} */


/*=================================================================
    404 Page
=================================================================*/

.glitch {
    position: relative;
    color: white;
    font-size: 8em;
    letter-spacing: 0.5em;
    animation: glitch-skew 1s infinite linear alternate-reverse;
}

.glitch::before {
    content: attr(data-text);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    left: 2px;
    text-shadow: -2px 0 #ff00c1;
    clip: rect(44px, 450px, 56px, 0);
    animation: glitch-anim 5s infinite linear alternate-reverse;
}

.glitch::after {
    content: attr(data-text);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    left: -2px;
    text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
    animation: glitch-anim2 1s infinite linear alternate-reverse;
}
/* ... */

